// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrentWeatherBasicLocationInfo Given UnitType: imperial, then it will match snapshot 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      },
    ]
  }
>
  <Image
    source={
      {
        "uri": "https://openweathermap.org/img/wn/01d@2x.png",
      }
    }
    style={
      {
        "aspectRatio": 1,
        "height": "100%",
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
        }
      }
    >
      Wrocław
    </Text>
    <Text>
      clear sky
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        {
          "alignItems": "center",
          "aspectRatio": 2.5,
          "backgroundColor": "cyan",
          "justifyContent": "center",
        },
        {
          "borderRadius": 20,
          "height": 40,
          "padding": 10,
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "fontSize": 20,
          "lineHeight": 20,
        }
      }
    >
      17.1
      °F
    </Text>
  </View>
</View>
`;

exports[`CurrentWeatherBasicLocationInfo Given UnitType: metric, then it will match snapshot 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      },
    ]
  }
>
  <Image
    source={
      {
        "uri": "https://openweathermap.org/img/wn/01d@2x.png",
      }
    }
    style={
      {
        "aspectRatio": 1,
        "height": "100%",
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
        }
      }
    >
      Loading...
    </Text>
    <Text>
      clear sky
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        {
          "alignItems": "center",
          "aspectRatio": 2.5,
          "backgroundColor": "cyan",
          "justifyContent": "center",
        },
        {
          "borderRadius": 20,
          "height": 40,
          "padding": 10,
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "fontSize": 20,
          "lineHeight": 20,
        }
      }
    >
      17.1
      °C
    </Text>
  </View>
</View>
`;

exports[`CurrentWeatherBasicLocationInfo Given UnitType: standard, then it will match snapshot 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      },
    ]
  }
>
  <Image
    source={
      {
        "uri": "https://openweathermap.org/img/wn/01d@2x.png",
      }
    }
    style={
      {
        "aspectRatio": 1,
        "height": "100%",
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
        }
      }
    >
      Wrocław
    </Text>
    <Text>
      clear sky
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        {
          "alignItems": "center",
          "aspectRatio": 2.5,
          "backgroundColor": "cyan",
          "justifyContent": "center",
        },
        {
          "borderRadius": 20,
          "height": 40,
          "padding": 10,
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "fontSize": 20,
          "lineHeight": 20,
        }
      }
    >
      17.1
      K
    </Text>
  </View>
</View>
`;
